feat(llm): BYOK 阶段 B 前半 — SPI 动态化（factory 重载 + Registry per-user 快照）
- LlmClientFactory：buildSnapshot(List<ResolvedCandidate>) 重载（provider 直接 new 无 cache）
  + 抽 buildChain/createRawClient(provider,candidate) 共用；ResolvedCandidate record
- LlmConfigSource：用户级 DB > yml 三态（无行/全disabled+counter/有enabled）
  + entity→ResolvedCandidate（解密key+命名空间 candidateId u:{userId}:{model}）
- LlmClientRegistry：per-user 快照 cache-aside（Caffeine 有界 + removalListener asyncClose）
  + getUser*/getUserDefault + invalidateUser + asyncClose 专用池（不复用 fork-join）
  + 熔断器 evict（P1-6）+ disabledSet 归一化 stripUserPrefix（P1-5）+ @PreDestroy 排空
- LlmMetrics：recordByokFallback（AC29）+ recordByokCloseError（AC31）
- LlmByokProperties：allowedPorts + userCacheSize
- 14 新测试（LlmConfigSource 6 + LlmClientRegistry 8），全量 267 绿
- 纯加法（旧 API 保留，14 调用方零改动），Step 11 调用方切换后续